# afya-guard-backend

./: README.md  extract_pages.py  generate_sha_claims old.py  generate_sha_claims.py  pyproject.toml  test.db
.github/workflows/: keepalive.yml
afya-guard-backend-api-tests/: bruno.json
afya-guard-backend-api-tests/environments/: Development.bru
alembic/versions/: 03e7f83d7d80_update_models_fields_relationships.py  251187e69b6a_initial_schema.py  30f15b2003b4_add_case_number_to_fraud_cases.py  4c335c9afac5_add_fraud_reports_table.py  750fe3786620_fix_user_claim_relationship_error.py  8044be774367_recreate_permissions_roles_tables.py  88ad7cb7b7e9_add_submitted_hour_and_eligibility_.py  91869c8cce95_initial_schema.py  b6f9f417bd0a_change_model_timestamps_to_timezone_.py  bb1fb610df58_add_provider_bed_capacity.py  e36c9a87d037_add_facility_level_to_providers.py  ff4279b4e85f_refactor_add_new_models.py  ff70692b3b75_add_department_to_users.py
app/: main.py
app/core/: config.py  database.py  security.py
app/detectors/: base_detector.py  duplicate_detector old.py  duplicate_detector.py  ghost_provider_detector.py  phantom_patient_detector.py  provider_profiler_detector.py  upcoding_detector old.py  upcoding_detector.py  upcoding_medical_db.py
app/enums/: enums.py
app/models/: __init__.py  alert_notification_model.py  audit_log_model.py  case_note_model.py  claim_feature_model.py  claim_model.py  claim_service_model.py  enums_model.py  fraud_alert_model.py  fraud_case_model.py  fraud_explanation_model.py  fraud_rule_model.py  fraud_score_model.py  investigation_model.py  member_model.py  ml_model.py  model_version_model.py  patient_model.py  permission_model.py  provider_model.py  refresh_token_model.py  report_model.py  role_model.py  system_metric_model.py  user_model.py
app/schemas/: admin_schema.py  alert_schema.py  auth_schema.py  base_schema.py  case_schema.py  claim_schema.py  dashboard_schema.py  fraud_schema.py  provider_schema.py  report_schema.py  user_schema.py
app/scripts/: debug_score.py  generate_dataset.py  retrain_model.py  train_model original.py  train_model.py  train_upcoding_model.py
app/seeds/: run old.py  run.py  seed_data.py
data/: sha_claims_dataset.csv
forms/: claims_ledger.csv  claims_ledger.json
ml_models/: county_encoder.json  feature_list.joblib  fraud_xgboost.joblib  fraud_xgboost.ubj  le_claim_type.joblib  le_county.joblib  upcoding_features.joblib  upcoding_rf.joblib
src/: main.py
(+76 files in other folders)
