[project]
name = "afya-guard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
]
