[project]
name = "afya-guard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.1",
    "faker>=40.5.1",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "xgboost>=3.2.0",
]
